[gd_scene load_steps=9 format=3 uid="uid://crjn0w4751g5"]

[ext_resource type="Script" path="res://Scripts/UI/Main.gd" id="1_ka1y2"]
[ext_resource type="Script" path="res://Scripts/UI/Window_splash.gd" id="2_2dste"]
[ext_resource type="Theme" uid="uid://cvnn62rtwnmxn" path="res://Assets/Themes/Main_theme.tres" id="2_5i716"]
[ext_resource type="PackedScene" uid="uid://cy38flw5v22vc" path="res://Scenes/UI/Background.tscn" id="2_eb4lb"]
[ext_resource type="Script" path="res://Scripts/UI/Menu_button_bar.gd" id="5_5ma3c"]
[ext_resource type="Script" path="res://Scripts/UI/Worldgen_button_bar.gd" id="6_yr6j7"]
[ext_resource type="Script" path="res://Scripts/Logic/Worldgen/Worldgen.gd" id="7_x76hx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nhxd2"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ka1y2")
metadata/_edit_horizontal_guides_ = [0.0, 1080.0]

[node name="Window_splash" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_2dste")

[node name="Background_holder" parent="Window_splash" instance=ExtResource("2_eb4lb")]
layout_mode = 1

[node name="Label" type="Label" parent="Window_splash"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -31.5
offset_right = 105.0
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_5i716")
theme_override_font_sizes/font_size = 50
text = "pGLOWrpg"

[node name="Window_menu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background_holder" parent="Window_menu" instance=ExtResource("2_eb4lb")]
layout_mode = 1

[node name="Label" type="Label" parent="Window_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -31.5
offset_right = 105.0
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_5i716")
theme_override_font_sizes/font_size = 50
text = "pGLOWrpg"

[node name="Label2" type="Label" parent="Window_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.5
offset_top = 43.0
offset_right = 66.5
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_5i716")
theme_override_font_sizes/font_size = 25
text = "Godot edition"

[node name="Menu_button_bar" type="Control" parent="Window_menu"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = -118.0
offset_right = -62.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("5_5ma3c")
metadata/_edit_use_anchors_ = true

[node name="Button_worldgen" type="Button" parent="Window_menu/Menu_button_bar"]
layout_mode = 1
offset_right = 100.0
offset_bottom = 60.0
theme = ExtResource("2_5i716")
text = "Worldgen"

[node name="Button_play" type="Button" parent="Window_menu/Menu_button_bar"]
layout_mode = 1
offset_left = 110.0
offset_right = 210.0
offset_bottom = 60.0
theme = ExtResource("2_5i716")
text = "Play"

[node name="Button_quit" type="Button" parent="Window_menu/Menu_button_bar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 60.0
grow_horizontal = 0
theme = ExtResource("2_5i716")
text = "Quit
"

[node name="Window_worldgen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background_holder" parent="Window_worldgen" instance=ExtResource("2_eb4lb")]
layout_mode = 1

[node name="Worldgen_button_bar" type="Control" parent="Window_worldgen"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = -118.0
offset_right = -62.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("6_yr6j7")
metadata/_edit_use_anchors_ = true

[node name="Button_start" type="Button" parent="Window_worldgen/Worldgen_button_bar"]
layout_mode = 1
offset_right = 100.0
offset_bottom = 60.0
theme = ExtResource("2_5i716")
text = "Start"

[node name="Button_preset" type="Button" parent="Window_worldgen/Worldgen_button_bar"]
layout_mode = 1
offset_left = 110.0
offset_right = 210.0
offset_bottom = 60.0
theme = ExtResource("2_5i716")
text = "Preset"

[node name="Button_back" type="Button" parent="Window_worldgen/Worldgen_button_bar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 60.0
grow_horizontal = 0
theme = ExtResource("2_5i716")
text = "Back
"

[node name="Text_frame" type="Panel" parent="Window_worldgen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = 60.0
offset_right = -60.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nhxd2")

[node name="Scroll_container" type="ScrollContainer" parent="Window_worldgen/Text_frame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_5i716")

[node name="Text_output" type="Label" parent="Window_worldgen/Text_frame/Scroll_container"]
layout_mode = 2
theme = ExtResource("2_5i716")
text = "Test output
Test output
Test output
Test output
Test output
"

[node name="Worldgen" type="Node" parent="Window_worldgen"]
script = ExtResource("7_x76hx")

[connection signal="pressed" from="Window_menu/Menu_button_bar/Button_worldgen" to="Window_menu/Menu_button_bar" method="_on_button_worldgen_pressed"]
[connection signal="pressed" from="Window_menu/Menu_button_bar/Button_quit" to="Window_menu/Menu_button_bar" method="_on_button_quit_pressed"]
[connection signal="pressed" from="Window_worldgen/Worldgen_button_bar/Button_start" to="Window_worldgen/Worldgen_button_bar" method="_on_button_start_pressed"]
[connection signal="pressed" from="Window_worldgen/Worldgen_button_bar/Button_back" to="Window_worldgen/Worldgen_button_bar" method="_on_button_back_pressed"]
